test/infiniteType1.slq
// args: --inference-limit=5

def foo()⇒foo; /// error

